<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:text="@string/texto_confirmar_datos"
        android:textSize="@dimen/size_campo_confirmarDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="362dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:text="@string/nombre"
        android:textSize="@dimen/size_campo_mostrar_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/texto_descripcion"
        android:textSize="@dimen/size_campo_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="77dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/texto_fecha"
        android:textSize="@dimen/size_campo_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="274dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/fecha"
        android:textSize="@dimen/size_campo_mostrar_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/texto_tel"
        android:textSize="@dimen/size_campo_tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/telefono"
        android:textSize="@dimen/size_campo_mostrar_telefono"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/texto_email"
        android:textSize="@dimen/size_campo_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="266dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/email"
        android:textSize="@dimen/size_campo_mostrar_email"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelefono" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="264dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/descripcion"
        android:textSize="@dimen/size_campo_mostrar_descripcion"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="EditarDatos"
        android:text="@string/boton_editar_campos"
        android:textSize="@dimen/size_campo_boton_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>